--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "version": 2,
-  "installCommand": "npm install",
-  "functions": {
-    "api/rotador.js": {
-      "runtime": "nodejs20.x"
-    },
-    "api/enviar-pago.cjs": {
-      "runtime": "nodejs20.x"
-    }
+  "name": "capi-project-final",
+  "version": "1.0.0",
+  "private": true,
+  "dependencies": {
+    "facebook-nodejs-business-sdk": "latest"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
