--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "private": true,
   "dependencies": {
     "facebook-nodejs-business-sdk": "latest"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
