--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "functions": {
     "api/rotador.js": {
-      "runtime": "nodejs20.x"
+      "runtime": "node@20"
     },
     "api/enviar-pago.cjs": {
-      "runtime": "nodejs20.x"
+      "runtime": "node@20"
     }
   }
 }
