--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "facebook-nodejs-business-sdk": "latest"
   },
   "engines": {
-    "node": "18.x" // Versión estable y soportada por Vercel para Serverless
+    "node": "18.x"
   }
 }
